--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,11 @@
-<h2 id="title">Welcome to Ember.js</h2>
 
 {{outlet}}
+
+<div class="container">
+  <footer class="main-footer">
+    <div class="pull-right hidden-xs">
+      Built by <a href="http://www.arinhouck.com" title="Arin Houck Web Development"> Arin Houck </a>
+    </div>
+    <strong>Copyright &copy; 2015 <a href="#">Gradebuildr</a>.</strong> All rights reserved.
+  </footer>
+</div>
