--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,3 +1,28 @@
-<p>
-  Hello world
-</p>
+{{partial 'partials/header'}}
+
+<div class="jumbotron">
+  <div class="container">
+    <h2>Welcome, fellow students!</h2>
+    <p>This application was made to help you track your grades in your college curriculum and properly weigh grades based on your criteria.</p>
+    <p><a class="btn btn-primary btn-md" href="#" role="button">Learn more</a></p>
+  </div>
+</div>
+
+<section class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Classes</h3>
+        <p>Keep track of your entire college curriculum by adding multiple classes to your highly customizable profile. </p>
+      </div>
+      <div class="col-md-4">
+        <h3>Grades</h3>
+        <p>Fill out your assignments, homeworks, and exams to the best of your ability and we will accurately represent these into your current grade. </p>
+     </div>
+      <div class="col-md-4">
+        <h3>Weights</h3>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. </p>
+      </div>
+    </div>
+  </div>
+</section>
