--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -10,7 +10,7 @@
 
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
-        <li><a href="#" {{action "toggleModal"}}>Register</a></li>
+        <li><a href="#">Register</a></li>
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle">
             <span>Login</span>
