--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,4 @@
+{{partial 'partials/header'}}
 
 {{outlet}}
 
@@ -6,6 +7,6 @@
     <div class="pull-right hidden-xs">
       Built by <a href="http://www.arinhouck.com" title="Arin Houck Web Development"> Arin Houck </a>
     </div>
-    <strong>Copyright &copy; 2015 <a href="#">Gradebuildr</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2015 {{#link-to "index"}}Gradebuildr{{/link-to}}.</strong> All rights reserved.
   </footer>
 </div>
