--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -2,7 +2,9 @@
   <nav class="navbar">
     <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand"><b>grade</b>buildr</a>
+      {{#link-to "index" class="navbar-brand"}}
+        <b>grade</b>buildr
+      {{/link-to}}
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
@@ -11,14 +13,33 @@
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#" {{action 'openModal'}} modal-id="registerModal"> Register </a>
+          <a href="#register" {{action 'openModal'}} modal-id="register"> Register </a>
         </li>
+        {{#if session.isAuthenticated}}
         <li class="dropdown user user-menu">
-          <a href="#" class="dropdown-toggle">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            {{session.name}}
+          </a>
+          <ul class="dropdown-menu">
+            <!-- Menu Footer-->
+            <li class="user-footer">
+              <div class="pull-left">
+                <a href="./profile.html" class="btn btn-default btn-flat">Profile</a>
+              </div>
+              <div class="pull-right">
+                <button {{action 'invalidateSession'}} class="btn btn-default btn-flat">Log out</button>
+              </div>
+            </li>
+          </ul>
+        </li>
+        {{else}}
+        <li class="dropdown user user-menu">
+          {{#link-to "login" class="dropdown-toggle"}}
             <span>Login</span>
             {{!-- Login Partial --}}
-          </a>
+          {{/link-to}}
         </li>
+        {{/if}}
       </ul>
     </div>
 
@@ -26,7 +47,7 @@
   </nav>
 </header>
 
-{{#em-modal-form open-if=openModal configName="bs" id="registerModal" on-submit="register" in-async=async}}
+{{#em-modal-form open-if=openModal configName="bs" id="register" on-submit="register" in-async=async}}
     {{#em-modal-title}}
         {{#em-modal-toggler class="close"}}<span aria-hidden="true">×</span><span class="sr-only">Close</span>{{/em-modal-toggler}}
         <h4 class="modal-title">Register</h4>
