--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -1,29 +1,48 @@
-<section class="content">
-  <div class="container">
-    <h3>Login</h3>
-  <form {{action "authenticate" on="submit"}}>
+{{#if session.isAuthenticated}}
+  <li class="dropdown user user-menu">
+    <a {{action 'toggleMenu' }} href="#" class="dropdown-toggle">
+      Welcome, {{session.name}}
+    </a>
     <ul class="dropdown-menu">
-      <li class="user-body">
-        <div class="form-group">
-          <label for="identification">E-mail</label><br />
-          {{input value=identification placeholder="E-mail" type="text" name="email"}}
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label><br />
-          {{input value=password placeholder="Password" type="password" name="password"}}
-        </div>
-      </li>
-      <!-- Menu Footer-->
       <li class="user-footer">
         <div class="pull-left">
-          <a href="#" class="btn btn-default btn-flat" id="cancel">Cancel</a>
+          <button href="#" class="btn btn-default btn-flat">Profile</button>
         </div>
         <div class="pull-right">
-          <button type="submit" class="btn btn-default btn-flat" id="login">Log in</button>
+          <button {{action 'invalidateSession'}} class="btn btn-default btn-flat">Log out</button>
         </div>
       </li>
-
     </ul>
-  </form>
-  </div>
-</section>
+  </li>
+{{else}}
+  <li>
+    <a href="#register" {{action 'openModal'}} modal-id="register"> Register </a>
+  </li>
+  <li class="dropdown user user-menu">
+    <a {{action "toggleMenu" }} href="#login" class="dropdown-toggle">
+      <span>Login</span>
+    </a>
+      <ul class="dropdown-menu">
+          <li class="user-body">
+            <form {{action "authenticate" on="submit"}}>
+            <div class="form-group">
+              <label for="identification">Email address</label><br />
+              {{input value=identification placeholder="Email address" type="text" name="email" class="form-control"}}
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label><br />
+              {{input value=password placeholder="Password" type="password" name="password" class="form-control"}}
+            </div>
+            <div class="form-group">
+              <div class="pull-left">
+                <button class="btn btn-default btn-flat" id="cancel">Cancel</button>
+              </div>
+              <div class="pull-right">
+                <button type="submit" class="btn btn-default btn-flat" id="login">Log in</button>
+              </div>
+            </div>
+            </form>
+          </li>
+      </ul>
+  </li>
+{{/if}}
