font awesome, dashboard, session fixes

--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -7,7 +7,7 @@
     <%= include_ember_stylesheet_tags :frontend %>
     <%= csrf_meta_tags %>
   </head>
-  <body class="skin-black layout-top-nav">
+  <body class="skin-black">
     <%= yield %>
   </body>
 </html>
