--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,12 +1,9 @@
 {{partial 'partials/header'}}
 
+{{#if isDashboard}}
+  {{partial 'partials/sidebar'}}
+{{/if}}
+
 {{outlet}}
 
-<div class="container">
-  <footer class="main-footer">
-    <div class="pull-right hidden-xs">
-      Built by <a href="http://www.arinhouck.com" title="Arin Houck Web Development"> Arin Houck </a>
-    </div>
-    <strong>Copyright &copy; 2015 {{#link-to "index"}}Gradebuildr{{/link-to}}.</strong> All rights reserved.
-  </footer>
-</div>
+{{partial 'partials/footer'}}
