--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -1,7 +1,7 @@
 {{#if session.isAuthenticated}}
   <li class="dropdown user user-menu">
     <a {{action 'toggleMenu' }} href="#" class="dropdown-toggle">
-      Welcome, {{session.name}}
+      Welcome, {{session.content.secure.name}}
     </a>
     <ul class="dropdown-menu">
       <li class="user-footer">
