--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -5,6 +5,7 @@
     <title>Gradebuildr</title>
     <%= include_ember_script_tags :frontend %>
     <%= include_ember_stylesheet_tags :frontend %>
+    <%= stylesheet_link_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
   <body class="skin-black">
