--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,12 @@
  */
 
  @import "font-awesome";
+
+
+ div.checkbox > label > span {
+   vertical-align: middle;
+ }
+
+ table h4 {
+   margin: 0;
+ }
