--- a/frontend/app/templates/dashboard.hbs
+++ b/frontend/app/templates/dashboard.hbs
@@ -1,3 +1,114 @@
-<section class="content">
+<div class="content-wrapper" style="min-height: 916px;">
+  <section class="content-header">
+    <h1>
+      Dashboard
+      <small>Version 1.0</small>
+    </h1>
+  </section>
 
-</section>
+  <section class="content">
+    <div class="row">
+      <div class="col-lg-3 col-xs-6">
+        <div class="small-box bg-aqua">
+          <div class="inner">
+            <h3>6</h3>
+            <p>Classes</p>
+          </div>
+          <div class="icon">
+            <i class="ion ion-university"></i>
+          </div>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-xs-6">
+        <div class="small-box bg-yellow">
+          <div class="inner">
+            <h3>129</h3>
+            <p>Grades</p>
+          </div>
+          <div class="icon">
+            <i class="ion ion-document"></i>
+          </div>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+
+      </div>
+      <div class="col-lg-3 col-xs-6">
+        <div class="small-box bg-green">
+          <div class="inner">
+            <h3>3.43</h3>
+            <p>Semester GPA</p>
+          </div>
+          <div class="icon">
+            <i class="ion ion-pie-graph"></i>
+          </div>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-xs-6">
+        <div class="small-box bg-red">
+          <div class="inner">
+            <h3>3.62</h3>
+            <p>Cumulative GPA</p>
+          </div>
+          <div class="icon">
+            <i class="ion ion-stats-bars"></i>
+          </div>
+          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="box box-info">
+          <div class="box-header with-border">
+            <h3 class="box-title">Latest Grades</h3>
+            <div class="box-tools pull-right">
+              <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+            </div>
+          </div><!-- /.box-header -->
+          <div class="box-body">
+            <div class="table-responsive">
+              <table class="table no-margin">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Class</th>
+                    <th>Score</th>
+                    <th>Weight</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><a href="pages/examples/invoice.html">Homework #1</a></td>
+                    <td>CSE 230</td>
+                    <td><h4>20 <small>/30</small></h4></td>
+                    <td><span class="label label-primary">30%</span></td>
+                  </tr>
+                  <tr>
+                    <td><a href="pages/examples/invoice.html">Quiz #1</a></td>
+                    <td>CSE 230</td>
+                    <td><h4>8 <small>/10</small></h4></td>
+                    <td><span class="label label-danger">10%</span></td>
+                  </tr>
+                  <tr>
+                    <td><a href="pages/examples/invoice.html">Midterm #1</a></td>
+                    <td>CSE 230</td>
+                    <td><h4>12 <small>/14</small></h4></td>
+                    <td><span class="label label-warning">20%</span></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="box-footer clearfix">
+            <a href="javascript::;" class="btn btn-sm btn-default btn-flat pull-right">View All Grades</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+</div>
