hanled 422 response by displaying errors with growl

--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -16,7 +16,7 @@
   </li>
 {{else}}
   <li>
-    <a href="#register" {{action 'openModal'}} modal-id="register"> Register </a>
+    <a href="#register" id="register" {{action 'openModal'}} modal-id="registerModal"> Register </a>
   </li>
   <li class="dropdown user user-menu">
     <a {{action "toggleMenu" }} href="#login" class="dropdown-toggle">
