--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -9,15 +9,15 @@
 <section class="content">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <h3>Classes</h3>
         <p>Keep track of your entire college curriculum by adding multiple classes to your highly customizable profile. </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <h3>Grades</h3>
         <p>Fill out your assignments, homeworks, and exams to the best of your ability and we will accurately represent these into your current grade. </p>
      </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <h3>Weights</h3>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. </p>
       </div>
