--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
               <div class="pull-left">
-                <button class="btn btn-default btn-flat" id="cancel">Cancel</button>
+                <button {{action 'toggleMenu'}} class="btn btn-default btn-flat" id="cancel">Cancel</button>
               </div>
               <div class="pull-right">
                 <button type="submit" class="btn btn-default btn-flat" id="login">Log in</button>
