--- a/frontend/app/templates/partials/_sidebar.hbs
+++ b/frontend/app/templates/partials/_sidebar.hbs
@@ -11,12 +11,16 @@
 
     <ul class="sidebar-menu">
       <li class="header">MAIN NAVIGATION</li>
-      {{#link-to 'dashboard' tagName="li" href=false}}
+      {{#link-to 'dashboard.index' tagName="li" href=false}}
         <a {{bind-attr href="view.href"}}>
           {{fa-icon 'dashboard'}}<span>Dashboard</span>
         </a>
       {{/link-to}}
-      <li><a href="./classes.html">{{fa-icon 'university'}}<span>Classes</span></a></li>
+      {{#link-to 'dashboard.courses' tagName="li" href=false}}
+        <a {{bind-attr href="view.href"}}>
+          {{fa-icon 'university'}}<span>Courses</span>
+        </a>
+      {{/link-to}}
       <li><a href="./grades.html">{{fa-icon 'fa-file-text-o'}}<span>Grades</span></a></li>
     </ul>
 
