--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -1,4 +1,4 @@
-<div class="content-wrapper" style="min-height: 916px;">
+<div class="content-wrapper">
   <section class="content-header">
     <h1>
       Dashboard
@@ -12,7 +12,7 @@
         <div class="small-box bg-aqua">
           <div class="inner">
             <h3>6</h3>
-            <p>Classes</p>
+            <p>Courses</p>
           </div>
           <div class="icon">
             <i class="ion ion-university"></i>
@@ -74,7 +74,7 @@
                 <thead>
                   <tr>
                     <th>Name</th>
-                    <th>Class</th>
+                    <th>Course</th>
                     <th>Score</th>
                     <th>Weight</th>
                   </tr>
