--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -67,7 +67,7 @@
             <div class="box-tools pull-right">
               <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
             </div>
-          </div><!-- /.box-header -->
+          </div>
           <div class="box-body">
             <div class="table-responsive">
               <table class="table no-margin">
