--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -1,6 +1,6 @@
 {{#if isDashboard}}
   <header class="main-header">
-    {{#link-to "index" class="logo"}}
+    {{#link-to "dashboard.index" class="logo"}}
       <b>grade</b>buildr
     {{/link-to}}
     <nav class="navbar">
