--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -18,7 +18,7 @@
             <i class="ion ion-university"></i>
           </div>
           {{#link-to 'dashboard.courses' class='small-box-footer'}}
-            More info <i class="fa fa-arrow-circle-right"></i>
+            More info {{fa-icon 'arrow-circle-right'}}
           {{/link-to}}
         </div>
       </div>
