--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -11,8 +11,8 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-aqua">
           <div class="inner">
-            <h3>{{model.user.courses.length}}</h3>
-            <p>{{h-pluralize model.user.courses.length "Course" omitCount=true}}</p>
+            <h3>{{model.courses.length}}</h3>
+            <p>{{h-pluralize model.courses.length "Course" omitCount=true}}</p>
           </div>
           <div class="icon">
             <i class="ion ion-university"></i>
