--- a/frontend/app/templates/dashboard/courses/index.hbs
+++ b/frontend/app/templates/dashboard/courses/index.hbs
@@ -25,7 +25,7 @@
                 <tr>
                   <td>
                     {{!-- {{#link-to 'dashboard.courses.show' course}} --}}
-                      {{course.subject}} {{course.number}}
+                      {{course.name}}
                     {{!-- {{/link-to}} --}}
                   </td>
                   <td>
