--- a/frontend/app/templates/dashboard/courses/index.hbs
+++ b/frontend/app/templates/dashboard/courses/index.hbs
@@ -16,6 +16,7 @@
               <tr>
                 <th>Name</th>
                 <th>Credit Hours</th>
+                <th>Current Grade</th>
                 <th>Grading Scale</th>
                 <th>Weights</th>
               </tr>
@@ -32,6 +33,9 @@
                     {{course.creditHours}}
                   </td>
                   <td>
+                    {{course.currentGrade}}
+                  </td>
+                  <td>
                     {{course.gradingScale}}
                   </td>
                   <td>
@@ -39,18 +43,6 @@
                       {{#each course.weights as |weight|}}
                         {{progress-bar name=weight.name percentage=weight.percentage}}
                       {{/each}}
-                      {{!-- <div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
-                        <span>10% Quizzes</span>
-                      </div>
-                      <div class="progress-bar progress-bar-blue" role="progressbar" aria-valuenow="18" aria-valuemin="0" aria-valuemax="100" style="width: 18%">
-                        <span>18% Midterm 1</span>
-                      </div>
-                      <div class="progress-bar progress-bar-aqua" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        <span>20% Midterm 2</span>
-                      </div>
-                      <div class="progress-bar progress-bar-yellow" role="progressbar" aria-valuenow="22" aria-valuemin="0" aria-valuemax="100" style="width: 22%">
-                        <span>22% Final Exam</span>
-                      </div> --}}
                     </div>
                   </td>
                 </tr>
