--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -40,7 +40,7 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-green">
           <div class="inner">
-            <h3>3.43</h3>
+            <h3>{{model.semesterGpa}}</h3>
             <p>Semester GPA</p>
           </div>
           <div class="icon">
