--- a/frontend/app/templates/dashboard/grades/index.hbs
+++ b/frontend/app/templates/dashboard/grades/index.hbs
@@ -26,7 +26,7 @@
                   <td>{{grade.name}}</td>
                   <td>{{grade.course.name}}</td>
                   <td><h4>{{grade.score}} <small>/{{grade.scoreTotal}}</small></h4></td>
-                  <td><span class="label label-primary">{{grade.weight.percentage}}%</span></td>
+                  <td><span class="label label-primary">{{grade.weight.name}} {{grade.weight.percentage}}%</span></td>
                 </tr>
               {{/each}}
             </tbody>
