add percent sign to current grade

--- a/frontend/app/templates/dashboard/courses/index.hbs
+++ b/frontend/app/templates/dashboard/courses/index.hbs
@@ -33,7 +33,7 @@
                     {{course.creditHours}}
                   </td>
                   <td>
-                    {{course.currentGrade}}
+                    {{course.currentGrade}} %
                   </td>
                   <td>
                     {{course.gradingScale}}
