--- a/frontend/app/templates/dashboard/courses/new.hbs
+++ b/frontend/app/templates/dashboard/courses/new.hbs
@@ -44,11 +44,11 @@
           <div class="form-group">
             <div class="row">
               <div class="col-sm-6">
-                {{input value=weight.subject class='form-control input-sm' placeholder='Enter weight name'}}
+                {{input value=weight.name class='form-control input-sm' placeholder='Enter weight name'}}
               </div>
               <div class="col-sm-6">
                 <div class="input-group">
-                  {{input value=weight.number class='form-control input-sm' type='number' placeholder='Enter weight percentage'}}
+                  {{input value=weight.percentage class='form-control input-sm' type='number' placeholder='Enter weight percentage'}}
                   <div class="input-group-addon">%</div>
                 </div>
               </div>
