--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -34,9 +34,13 @@
         </div>
       </div>
       <div class="box-footer clearfix">
-        <a href="javascript::;" class="btn btn-sm btn-default btn-flat pull-right">Create New Grade</a>
+        {{#link-to 'dashboard.grades.new' class="btn btn-sm btn-default btn-flat pull-right" id="newGrade"}}
+          New Grade
+        {{/link-to}}
       </div>
     </div>
+
+    {{outlet}}
 
   </section>
 </div>
