--- a/frontend/app/templates/dashboard/grades/new.hbs
+++ b/frontend/app/templates/dashboard/grades/new.hbs
@@ -36,7 +36,7 @@
               <div class="col-sm-4">
                 {{view "select"
                    content=gradeWeights
-                   value=selectedWeight
+                   value=grade.selectedWeight
                    optionValuePath="content.id"
                    optionLabelPath="content.name"
                    class='form-control input-sm'
@@ -52,7 +52,7 @@
               </div>
             </div>
           </div>
-        {{ else }}
+        {{else}}
           <p class='text-muted'> No grades. </p>
         {{/each}}
       </div>
