--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -18,6 +18,7 @@
                 <th>Class</th>
                 <th>Score</th>
                 <th>Weight</th>
+                <th>Actions</th>
               </tr>
             </thead>
             <tbody>
@@ -27,6 +28,12 @@
                   <td>{{grade.course.name}}</td>
                   <td><h4>{{grade.score}} <small>/{{grade.scoreTotal}}</small></h4></td>
                   <td><span class="label label-primary">{{grade.weight.name}} {{grade.weight.percentage}}%</span></td>
+                  <td>
+                    {{#link-to 'dashboard.grades.edit' grade class="btn btn-default btn-flat btn-xs"}}
+                      {{fa-icon 'edit'}}
+                    {{/link-to}}
+                    <button type="button" name="button" class="btn btn-danger btn-flat btn-xs" title="Delete" {{action 'deleteGrade' grade}}>{{fa-icon 'trash'}}</button>
+                  </td>
                 </tr>
               {{/each}}
             </tbody>
