--- a/frontend/app/templates/dashboard/courses/new.hbs
+++ b/frontend/app/templates/dashboard/courses/new.hbs
@@ -1,12 +1,12 @@
-{{#em-modal-form open-if=openModal configName="bs" id="newCourseModal" on-submit="createCourse" in-async=async}}
+{{#em-modal-form open-if=openModal is-open=isOpen configName="bs" id="newCourseModal" on-submit="createCourse" in-async=async}}
   {{#em-modal-title}}
     {{#em-modal-toggler class="close"}}<span aria-hidden="true">×</span><span class="sr-only">Close</span>{{/em-modal-toggler}}
     <h4 class="modal-title">New Course</h4>
   {{/em-modal-title}}
 
 {{#em-modal-body}}
-  {{#if model.async}}
-      Submitting, please wait...
+  {{#if async}}
+      <p class="lead text-center">Submitting, please wait...</p>
   {{else}}
     <div class="box-body">
       <div class="form-group">
@@ -54,7 +54,7 @@
               </div>
             </div>
           </div>
-        {{ else }}
+        {{else}}
           <p class='text-muted'> No weights. </p>
         {{/each}}
       </div>
