step any for float support

--- a/frontend/app/templates/components/grade-form.hbs
+++ b/frontend/app/templates/components/grade-form.hbs
@@ -15,9 +15,9 @@
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="input-group">
-        {{input value=grade.score class='form-control input-sm no-border' type='number' placeholder='Score'}}
+        {{input value=grade.score class='form-control input-sm no-border' type='number' step='any' placeholder='Score'}}
         <div class="input-group-addon lead no-border">/</div>
-        {{input value=grade.scoreTotal class='form-control input-sm no-border' type='number' placeholder='Total'}}
+        {{input value=grade.scoreTotal class='form-control input-sm no-border' type='number' step='any' placeholder='Total'}}
       </div>
     </div>
   </div>
