--- a/frontend/app/templates/dashboard/grades/edit.hbs
+++ b/frontend/app/templates/dashboard/grades/edit.hbs
@@ -19,6 +19,7 @@
            optionLabelPath="content.name"
            class='form-control'
            prompt='Please select a course'
+           required='true'
         }}
       </div>
 
