--- a/frontend/app/templates/components/grade-form.hbs
+++ b/frontend/app/templates/components/grade-form.hbs
@@ -1,7 +1,7 @@
 <div class="form-group">
   <div class="row">
     <div class="col-sm-4 col-xs-6">
-      {{input value=grade.name class='form-control input-sm' placeholder='Enter grade name'}}
+      {{input value=grade.name class='form-control input-sm' required='true' placeholder='Enter grade name'}}
     </div>
     <div class="col-sm-4 col-xs-6">
       {{view "select"
@@ -11,13 +11,14 @@
          optionLabelPath="content.name"
          class='form-control input-sm'
          prompt='Please select a grade weight'
+         required='true'
       }}
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="input-group">
-        {{input value=grade.score class='form-control input-sm no-border' type='number' step='any' placeholder='Score'}}
+        {{input value=grade.score class='form-control input-sm no-border' type='number' required='true' step='any' placeholder='Score'}}
         <div class="input-group-addon lead no-border">/</div>
-        {{input value=grade.scoreTotal class='form-control input-sm no-border' type='number' step='any' placeholder='Total'}}
+        {{input value=grade.scoreTotal class='form-control input-sm no-border' type='number' required='true' step='any' placeholder='Total'}}
       </div>
     </div>
   </div>
