--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Gradebuildr</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= include_ember_script_tags :frontend %>
     <%= include_ember_stylesheet_tags :frontend %>
     <%= stylesheet_link_tag 'application' %>
