--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -84,24 +84,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td><a href="pages/examples/invoice.html">Homework #1</a></td>
-                    <td>CSE 230</td>
-                    <td><h4>20 <small>/30</small></h4></td>
-                    <td><span class="label label-primary">30%</span></td>
-                  </tr>
-                  <tr>
-                    <td><a href="pages/examples/invoice.html">Quiz #1</a></td>
-                    <td>CSE 230</td>
-                    <td><h4>8 <small>/10</small></h4></td>
-                    <td><span class="label label-danger">10%</span></td>
-                  </tr>
-                  <tr>
-                    <td><a href="pages/examples/invoice.html">Midterm #1</a></td>
-                    <td>CSE 230</td>
-                    <td><h4>12 <small>/14</small></h4></td>
-                    <td><span class="label label-warning">20%</span></td>
-                  </tr>
+                  {{!-- Component for each grade row --}}
                 </tbody>
               </table>
             </div>
