--- a/frontend/app/templates/dashboard/courses.hbs
+++ b/frontend/app/templates/dashboard/courses.hbs
@@ -1,5 +1,8 @@
 <div class="content-wrapper">
   <section class="content-header">
+    {{#link-to 'dashboard.courses.new' class="btn btn-sm btn-default btn-flat pull-right" id="newCourse"}}
+      New Course
+    {{/link-to}}
     <h1>
       Courses
     </h1>
@@ -23,7 +26,7 @@
               </tr>
             </thead>
             <tbody>
-              {{#each model.courses as |course|}}
+              {{#each pagedContent as |course|}}
                 <tr>
                   <td>
                     {{!-- {{#link-to 'dashboard.courses.show' course}} --}}
@@ -59,9 +62,7 @@
         </div>
       </div>
       <div class="box-footer clearfix">
-        {{#link-to 'dashboard.courses.new' class="btn btn-sm btn-default btn-flat pull-right" id="newCourse"}}
-          New Course
-        {{/link-to}}
+        <span class='pull-right'>{{page-numbers content=pagedContent}}</span>
       </div>
     </div>
 
