--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -17,8 +17,8 @@
           <div class="icon">
             <i class="ion ion-university"></i>
           </div>
-          {{#link-to 'dashboard.courses' class='small-box-footer'}}
-            More info {{fa-icon 'arrow-circle-right'}}
+          {{#link-to 'dashboard.courses' class='small-box-footer hidden-md hidden-lg'}}
+            View all {{fa-icon 'arrow-circle-right'}}
           {{/link-to}}
         </div>
       </div>
@@ -31,8 +31,8 @@
           <div class="icon">
             <i class="ion ion-document"></i>
           </div>
-          {{#link-to 'dashboard.grades' class='small-box-footer'}}
-            More info {{fa-icon 'arrow-circle-right'}}
+          {{#link-to 'dashboard.grades' class='small-box-footer hidden-md hidden-lg'}}
+            View all {{fa-icon 'arrow-circle-right'}}
           {{/link-to}}
         </div>
 
@@ -46,7 +46,6 @@
           <div class="icon">
             <i class="ion ion-pie-graph"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-xs-6">
@@ -58,7 +57,6 @@
           <div class="icon">
             <i class="ion ion-stats-bars"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
       </div>
     </div>
