--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -26,16 +26,11 @@
             </thead>
             <tbody>
               {{#each grade in pagedContent}}
-                <tr>
-                  <td>{{grade.name}}</td>
-                  <td>{{grade.course.name}}</td>
-                  <td><h4>{{grade.score}} <small>/{{grade.scoreTotal}}</small></h4></td>
-                  <td><span class="label label-primary">{{grade.weight.name}} {{grade.weight.percentage}}%</span></td>
-                  <td>
-                    {{#link-to 'dashboard.grades.edit' grade class="btn btn-default btn-flat btn-xs"}}
-                      {{fa-icon 'edit'}}
-                    {{/link-to}}
-                    <button type="button" name="button" class="btn btn-danger btn-flat btn-xs" title="Delete" {{action 'deleteGrade' grade}}>{{fa-icon 'trash'}}</button>
+                {{grade-row grade=grade}}
+              {{else}}
+                <tr class='lead'>
+                  <td colspan='5' class='text-center'>
+                    No grades.
                   </td>
                 </tr>
               {{/each}}
