--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -83,7 +83,7 @@
                 </thead>
                 <tbody>
                   {{#each grade in pagedGradeContent}}
-                    {{grade-row grade=grade}}
+                    {{grade-row grade=grade hideActions=true}}
                   {{else}}
                     <tr class='lead'>
                       <td colspan='5' class='text-center'>
