--- a/frontend/app/templates/dashboard/grades/new.hbs
+++ b/frontend/app/templates/dashboard/grades/new.hbs
@@ -25,7 +25,7 @@
       </div>
 
       <div class="form-group">
-        <a {{bind-attr class=":label :bg-green :pull-right course::hide"}} {{action 'addGrade'}}><small>{{fa-icon 'plus'}} Add Grade</small></a>
+        <a {{bind-attr class=":label :bg-green :pull-right selectedCourse::hide"}} {{action 'addGrade'}}><small>{{fa-icon 'plus'}} Add Grade</small></a>
         <label for="grades">
           Grades
         </label>
