--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -6,7 +6,7 @@
     <nav class="navbar">
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          {{render 'login'}}
+          {{user-menu}}
         </ul>
       </div>
     </nav>
@@ -26,7 +26,12 @@
 
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
-            {{render 'login'}}
+            {{#unless session.isAuthenticated}}
+              <li>
+                <a href="#register" id="register" {{action 'openModal'}} modal-id="registerModal"> Register </a>
+              </li>
+            {{/unless}}
+            {{user-menu}}
           </ul>
         </div>
       </div>
