calculate cumulative gpa

--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -51,7 +51,7 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-red">
           <div class="inner">
-            <h3>&mdash;</h3>
+            <h3>{{model.cumulativeGpa}}</h3>
             <p>Cumulative GPA</p>
           </div>
           <div class="icon">
