--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -53,7 +53,7 @@
           </div>
           <div class="form-group">
             <div class="pull-left">
-              <button {{action 'toggleMenu'}} class="btn btn-default btn-flat" id="cancel">Cancel</button>
+              <button {{action "toggleDropdown"}} class="btn btn-default btn-flat" id="cancel">Cancel</button>
             </div>
             <div class="pull-right">
               <button type="submit" class="btn btn-default btn-flat" id="login">Log in</button>
