--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -4,6 +4,9 @@
       <b>grade</b>buildr
     {{/link-to}}
     <nav class="navbar">
+      <a class="sidebar-toggle" data-toggle="offcanvas" role="button">
+        <span class="sr-only">Toggle navigation</span>
+      </a>
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
           {{user-menu}}
