--- a/frontend/app/templates/partials/_sidebar.hbs
+++ b/frontend/app/templates/partials/_sidebar.hbs
@@ -1,5 +1,5 @@
-<div class="main-sidebar">
-  <div class="sidebar">
+<aside class="main-sidebar">
+  <section class="sidebar">
     <form action="#" method="get" class="sidebar-form">
       <div class="input-group">
         <input type="text" name="q" class="form-control" placeholder="Search..."/>
@@ -9,7 +9,7 @@
       </div>
     </form>
 
-    <ul class="sidebar-menu">
+    <ul class="nav sidebar-menu">
       <li class="header">MAIN NAVIGATION</li>
       {{#link-to 'dashboard.index' tagName="li" href=false}}
         <a {{bind-attr href="view.href"}}>
@@ -28,5 +28,5 @@
       {{/link-to}}
     </ul>
 
-  </div>
-</div>
+  </section>
+</aside>
