google analytics, template changes

--- a/frontend/app/templates/partials/_footer.hbs
+++ b/frontend/app/templates/partials/_footer.hbs
@@ -1,7 +1,7 @@
 <div class="{{if isDashboard '' 'container'}}">
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      Built by <a href="http://www.arinhouck.com" title="Arin Houck Web Development"> Arin Houck </a>
+      Built by <a href="http://www.arinhouck.com" target="_blank" title="Arin Houck Web Development"> Arin Houck </a>
     </div>
     <strong>Copyright &copy; 2015 {{#link-to "index"}}Gradebuildr{{/link-to}}.</strong> All rights reserved.
   </footer>
