--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <h3>Classes</h3>
-        <p>Keep track of your entire college curriculum by adding multiple classes to your highly customizable profile. </p>
+        <h3>Courses</h3>
+        <p>Keep track of your entire college curriculum by adding multiple courses to your highly customizable profile. </p>
       </div>
       <div class="col-sm-4">
         <h3>Grades</h3>
