--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -18,7 +18,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-36782630-4', 'auto');
+    ga('create', "<%= ENV['google_analytics_key'] %>", 'auto');
     ga('send', 'pageview');
 
   </script>
