--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -37,7 +37,7 @@
   </a>
 
   {{#if dropdownExpanded}}
-    <ul class="dropdown-menu rl-dropdown">
+    <ul class="dropdown-menu rl-dropdown" role="menu">
         <li class="user-body">
           {{loginErrorMessage}}
           <form {{action "authenticate" on="submit"}}>
