--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -4,7 +4,7 @@
       <b>grade</b>buildr
     {{/link-to}}
     <nav class="navbar">
-      <a class="sidebar-toggle" data-toggle="offcanvas" role="button">
+      <a class="sidebar-toggle" {{action 'toggleSidebar'}} role="button">
         <span class="sr-only">Toggle navigation</span>
       </a>
       <div class="navbar-custom-menu">
@@ -19,10 +19,11 @@
     <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
-          {{#link-to "index" class="navbar-brand"}}
+          {{#link-to "index" class="logo navbar-brand"}}
             <b>grade</b>buildr
           {{/link-to}}
         </div>
+
 
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
@@ -34,6 +35,7 @@
             {{user-menu}}
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
