--- a/frontend/app/templates/partials/_sidebar.hbs
+++ b/frontend/app/templates/partials/_sidebar.hbs
@@ -11,21 +11,21 @@
 
     <ul class="nav sidebar-menu">
       <li class="header">MAIN NAVIGATION</li>
-      {{#link-to 'dashboard.index' tagName="li" href=false}}
-        <a {{bind-attr href="view.href"}}>
+      {{#link-li}}
+        {{#link-to 'dashboard.index'}}
           {{fa-icon 'dashboard'}}<span>Dashboard</span>
-        </a>
-      {{/link-to}}
-      {{#link-to 'dashboard.courses' tagName="li" href=false}}
-        <a {{bind-attr href="view.href"}}>
+        {{/link-to}}
+      {{/link-li}}
+      {{#link-li}}
+        {{#link-to 'dashboard.courses'}}
           {{fa-icon 'university'}}<span>Courses</span>
-        </a>
-      {{/link-to}}
-      {{#link-to 'dashboard.grades' tagName="li" href=false}}
-        <a {{bind-attr href="view.href"}}>
+        {{/link-to}}
+      {{/link-li}}
+      {{#link-li}}
+        {{#link-to 'dashboard.grades'}}
           {{fa-icon 'file-text-o'}}<span>Grades</span>
-        </a>
-      {{/link-to}}
+        {{/link-to}}
+      {{/link-li}}
     </ul>
 
   </section>
