--- a/frontend/app/templates/dashboard/profile/edit.hbs
+++ b/frontend/app/templates/dashboard/profile/edit.hbs
@@ -15,12 +15,12 @@
       </div>
       <div class="form-group">
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-xs-6">
             <label for="gradePoints">Grade Points</label>
             {{input value=model.gradePoints class='form-control' id="gradePoints" placeholder='Enter grade points'}}
           </div>
-          <div class="col-sm-6">
-            <label for="gradeUnits">Grade Units towards GPA</label>
+          <div class="col-xs-6">
+            <label for="gradeUnits">Grade Units</label>
             {{input value=model.gradeUnits class='form-control' id="gradeUnits" placeholder='Enter grade units'}}
           </div>
         </div>
