--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -3,7 +3,15 @@
     <div class="col-sm-9 col-xs-12">
       <h2>Welcome, fellow students!</h2>
       <p>This application was made to help you track your grades in your college curriculum and properly weigh grades based on your course criteria.</p>
-      <p><a class="btn btn-default btn-flat btn-md" href="#" role="button">Learn more</a></p>
+      <p>
+        {{#if session.isAuthenticated}}
+          {{#link-to 'dashboard.index' class='btn btn-default btn-flat btn-md'}}
+            Go to Dashboard
+          {{/link-to}}
+        {{else}}
+          <a class="btn btn-default btn-flat btn-md" href="#" role="button">Learn more</a>
+        {{/if}}
+      </p>
     </div>
     <div class="col-sm-3 hidden-xs">
       <h1 class='container-icon'>{{fa-icon 'file-text-o' size=2}}</h1>
