--- a/frontend/app/templates/dashboard/courses/edit.hbs
+++ b/frontend/app/templates/dashboard/courses/edit.hbs
@@ -42,19 +42,7 @@
           Weights
         </label>
         {{#each weight in model.weights}}
-          <div class="form-group">
-            <div class="row">
-              <div class="col-xs-6">
-                {{input value=weight.name class='form-control input-sm' required='true' placeholder='Enter weight name'}}
-              </div>
-              <div class="col-xs-6">
-                <div class="input-group">
-                  {{input value=weight.percentage class='form-control input-sm' required='true' type='number' placeholder='Enter weight percentage'}}
-                  <div class="input-group-addon">%</div>
-                </div>
-              </div>
-            </div>
-          </div>
+          {{weight-row weight=weight parent=this editMode=true}}
         {{else}}
           <p class='text-muted'> No weights. </p>
         {{/each}}
